codemp/generated/cgame/cg_consolecmds.h

void CG_TargetCommand_f();
static void CG_SizeUp_f();
static void CG_SizeDown_f();
static void CG_Viewpos_f();
static void CG_ScoresDown_f();
static void CG_ScoresUp_f();
void CG_ClientList_f();
static void CG_TellTarget_f();
static void CG_TellAttacker_f();
static void CG_StartOrbit_f();
static void CG_SiegeBriefing_f();
static void CG_SiegeCvarUpdate_f();
static void CG_SiegeCompleteCvarUpdate_f();
static void CG_LoadHud_f();
int cmdcmp_cg( const void *a, const void *b );
qboolean CG_ConsoleCommand();
void CG_InitConsoleCommands();